log
do., 13 de mar. de 2022 20:45:59: 
 exercises.c | 28 ++++++++++++++++++++++------
 1 file changed, 22 insertions(+), 6 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'crearVector':
exercises.c:82:12: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
    v->datos=(Vector*)calloc(n, sizeof(Vector));
            ^
exercises.c: In function 'obtenerValor':
exercises.c:102:8: error: variable 'valor' set but not used [-Werror=unused-but-set-variable]
    int valor;
        ^~~~~
exercises.c: In function 'sumaV':
exercises.c:114:8: error: 'i' undeclared (first use in this function)
    for(i=0;i<a->capacidad;i++){
        ^
exercises.c:114:8: note: each undeclared identifier is reported only once for each function it appears in
cc1.exe: all warnings being treated as errors
Compilation failed
f04ac94
